# fraud-pipeline-patrol

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  notebook.ipynb  pyproject.toml  run_all_tests.py  run_tests.sh
.github/: CI_CD_README.md  README.md
.github/workflows/: ci.yml  pre-commit.yml
airflow/: README.md  variables.json
airflow/dags/: alert_users_dag.py  data_generation.py  data_generation_and_minio_load_dag.py  data_generation_dag.py  generate_and_partition_data_dag.py  initialize_metabase_dag.py  ml_transaction_scoring_dag.py  run_dbt_dag.py  score_transactions_dag.py  test-dag.py  upload_to_minio_dag.py  visualize_alert_data_dag.py
airflow/scripts/: entrypoint.sh
data/: README.md  generate_synthetic_fraud_data.py
dbt/: @TODO:
dbt/fraud_detection/: .user.yml  README.md  dbt_project.yml  main.py  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
dbt/fraud_detection/models/: customers.sql  sources.yml
dbt/fraud_detection/models/core/: fact_login_attempt.sql  fact_transaction.sql
dbt/fraud_detection/models/core/conformed_dimensions/: conformed_dimensions.yml  dim_customer.sql  dim_merchant.sql
dbt/fraud_detection/models/core/facts/: fact.yml  fact_login_attempt.sql  fact_transaction.sql
dbt/fraud_detection/models/dwh/: customers.sql
dbt/fraud_detection/models/dwh_staging/land/: _raw_customer.sql  _raw_login_attempt.sql  _raw_merchant.sql
dbt/fraud_detection/models/landing/: raw_customer.sql  raw_customer.yml  raw_login_attempt.sql  raw_login_attempt.yml  raw_merchant.sql  raw_transaction.sql  raw_transaction.yml  sources.yml
dbt/fraud_detection/models/marts/: v_login_attempt.sql  v_transaction.sql
dbt/fraud_detection/models/staging/: staging.yml  staging_models.yml  stg_customer.sql  stg_login_attempt.sql  stg_merchant.sql  stg_transaction.sql
helpers/: __init__.py  actualdata_postgres.py  postgres.py
metabase/: README.md  __init__.py  add_actualdata_postgres.sh  initialize_metabase.sh  metabase_batch_clone_cards.sh
metabase/metadata/: metabase_cards.json  metabase_dashboard.json
metabase/scripts/: initialize_metabase.py
scoring/: README.md  fraud_model.pkl  score_transactions.py
scoring/instructions/: scoring_instructions.md
scoring/scripts/: score_transactions.py
scoring_model/: fraud_model_building.ipynb
scripts/: README.md  __init__.py  generate_synthetic_fraud_data.py  partition_data_with_duckdb.py  upload_fraud_data_to_minio.py  visualize_alert_data.py
tests/: README.md  test_actualdata_postgres_helper.py  test_dag_parsing_and_validation.py  test_dag_structure_and_datasets.py  test_generate_synthetic_fraud_data.py  test_postgres_helper.py
(+6 files in other folders)
