[project]
name = "fraud-pipeline-patrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.9.4",
    "dbt-coverage>=0.3.9",
    "dbt-duckdb>=1.9.3",
    "dbterd",
    "duckdb>=1.2.2",
    "fastparquet>=2024.11.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.0",
    "pyarrow>=20.0.0",
    "requests>=2.32.3",
]

[tool.uv.sources]
dbterd = { git = "https://github.com/intellishore/dbt-erdiagram-generator", subdirectory = "src" }

[tool.uv.workspace]
members = [
    "dbt/fraud_detection",
]

[tool.setuptools.packages.find]
include = ["fraud_detection"]
